kubernetes/istio-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-b-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - my-gateway
  http:
  - match:
    - uri:
        prefix: "/my-service-b/"
    rewrite:
      uri: "/"
    route:
    - destination:
        port:
          number: 80
        host: my-service-b
